Using examples instead of example.
